fix: resolve all SonarQube issues for validation module
- S3516: Change handleCommand to return false for idempotent cases
- S3776: Refactor ObjectValidityService and RuleNodeEntityMapper to reduce cognitive complexity
- S1168: Return empty collection instead of null in SettingValidationRuleCommandDTOMapper
- S6204: Use Stream.toList() instead of collect(Collectors.toList())
- S3011: Use trySetAccessible() with conditional check instead of setAccessible(true)
- S2629: Use conditional logging for trace level statements
- S1066: Merge nested if statements